# tsp-rust

./: .gitignore  .gitmodules  Cargo.toml  main.tsp  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tspconfig.yaml
example/: main.tsp  package.json  tspconfig.yaml
fr/: main.tsp  models.tsp  routes.tsp
petstore/: Cargo.toml  main.tsp  package-lock.json  package.json  tspconfig.yaml
petstore/src/: generated.rs  lib.rs  router.rs
test-client/: Cargo.toml
test-client/src/: lib.rs  main.rs
test-client/src/example/: mod.rs
test-client/src/example2/: mod.rs
test-client/src/test/: mod.rs
tsp-rust/: package-lock.json  package.json  tsconfig.json
tsp-rust/lib/: main.tsp
tsp-rust/src/: auth.ts  case.ts  ctx.ts  declaration.ts  documentation.ts  enum.ts  feature.ts  indent.ts  index.ts  lib.ts  model.ts  module.ts  name.ts  operation.ts  options.ts  reference.ts  result.ts  rust.ts  scalars.ts  union.ts  vendored.ts  write.ts
tsp-rust/src/common/: declaration.ts  documentation.ts  enum.ts  interface.ts  keywords.ts  model.ts  module.ts  namespace.ts  reference.ts  scalar.ts  union.ts
tsp-rust/src/http/: auth.ts  feature.ts  operation.ts  options.ts  result.ts  router.ts  server.ts
tsp-rust/src/node/: rustfmt.ts
tsp-rust/src/pedantry/: pluralism.ts
tsp-rust/src/util/: bifilter.ts  case.ts  error.ts  extends.ts  iter.ts  name.ts  onceQueue.ts  rustfmt.ts  target.ts  utf8.ts  vendored.ts
tsp_rust/: Cargo.toml
tsp_rust/src/: lib.rs
