[package]
name = "petstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tsp_rust = { path = "../tsp_rust", features = ["http"]}
anyhow = "*"
matchit = "*"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

[lints]
workspace = true
