[package]
name = "test-client"
version = "0.1.0"
edition = "2021"
default-run = "test-client"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tsp_rust = { path = "../tsp_rust", features = ["http"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

actix-web = "4"
warp = "0.3"
matchit = "0.7"
anyhow = "1"
url = "2"
