[package]
name = "tsp_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
serde_with = { version = "3", features = ["std", "chrono_0_4"] }
serde = { version = "1", features = ["serde_derive"]}
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.11"
bigdecimal = "0.4"
tempdir = "0.3"
tower = "0.4"
http = "0.2"

